2005-03-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (as.matrix): method and one for unname()
	* tests/dpoMatrix.R: tests should now be less platform dependent;
	  also run for R 2.1.0; using as.matrix()

2005-03-15  Douglas Bates  <bates@bates1-home>

	* R/pMatrix.R: "pMatrix" class added
	* ....

2005-03-14  Douglas Bates  <bates@bates1-home>

	* R/dtpMatrix.R: Add unpack method and an example.

	* src/dsyMatrix.c (dsyMatrix_trf): Add BunchKaufman factorization
	of general symmetric matrices and associated S4 methods.

2005-03-10  Martin Maechler  <maechler@stat.math.ethz.ch>
	+
2005-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgeMatrix.R (setAs): and many other files: more coercion,
	  crossprod() and "%*%" methods added; tests, too.
	* tests/matprod.R: new, for testing these

2005-03-03  Douglas Bates  <bates@bates1-home>

	* src/lmer.c (lmer_fitted): Added.

2005-03-02  Douglas Bates  <bates@bates1-home>

	* R/dsTMatrix.R: Conversion from dsTMatrix to dsCMatrix

2005-02-28  Douglas Bates  <bates@bates1-home>

	* src/*.c,po/,inst/po: Internationalization and localization of
	the package.

	* src/ldl.[ch]: Removed these as their contents are referenced in the
	R_ldl.c file.

	* src/flame.[ch]: Removed these source files.

	* src/dtrMatrix.c (make_array_triangular): Move to Mutils

	* src/LU.[ch],src/init.c: absorb in factorizations

	* src/Mutils.h: prepare for internationalization

	* src/cblas.h: move the enum definitions to Mutils.h and remove
	this file

2005-02-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgeMatrix.R: provide "dimnames" and "dimnames<-" methods

	* R/dtrMatrix.R: fix t() method

	* R/dgeMatrix.R: define group methods "Arith", "Math", "Math2"
	* NAMESPACE: export them (and import generics from "methods")
	* tests/group-methods.R : and test them.

	* src/dtrMatrix.c (dtrMatrix_as_dgeMatrix): prevent seg.fault in
	border case

2005-02-24  Douglas Bates  <bates@stat.wisc.edu>
