@@ -28,63 +28,66 @@ export(
 
 exportClasses(
 	      "BunchKaufman",
-              "pBunchKaufman",
-              "Cholesky",
-              "pCholesky",
+	      "pBunchKaufman",
+	      "Cholesky",
+	      "pCholesky",
 	      "LU",
-              "Matrix",
-              ## also intermediate `virtual' ones:
-              "dMatrix",
-              ## not yet:   "iMatrix", "lMatrix", "zMatrix",
-              "ddenseMatrix",
+	      "Matrix",
+	      ## also intermediate `virtual' ones:
+	      "dMatrix",
+	      "sparseMatrix",
+	      "dsparseMatrix",
+	      ## not yet:   "iMatrix", "lMatrix", "zMatrix",
 
-              "dgBCMatrix",
-              "dgCMatrix",
-              "dgTMatrix",
-              "dgeMatrix",
-              "dpoMatrix",
-              "dppMatrix",
-              "dsCMatrix",
-              "dsTMatrix",
-              "dspMatrix",
-              "dsyMatrix",
-              "dtCMatrix",
-              "dtTMatrix",
-              "dtpMatrix",
-              "dtrMatrix",
+	      "ddenseMatrix",
 
-              "corrmatrix",
-              "pMatrix",
-              "pdmatrix",
-              "dCholCMatrix"
-              )
+	      "dgBCMatrix",
+	      "dgCMatrix",
+	      "dgTMatrix",
+	      "dgeMatrix",
+	      "dpoMatrix",
+	      "dppMatrix",
+	      "dsCMatrix",
+	      "dsTMatrix",
+	      "dspMatrix",
+	      "dsyMatrix",
+	      "dtCMatrix",
+	      "dtTMatrix",
+	      "dtpMatrix",
+	      "dtrMatrix",
+
+	      "corrmatrix",
+	      "pMatrix",
+	      "pdmatrix",
+	      "dCholCMatrix"
+	      )
 
 exportMethods(
-              ## Group Methods
-              "Arith",
-              "Math",
-              "Math2",
+	      ## Group Methods
+	      "Arith",
+	      "Math",
+	      "Math2",
 
-              "+",# for dgT(Matrix) only
-              "%*%",
+	      "+",# for dgT(Matrix) only
+	      "%*%",
 
-              "Schur",
-              "as.matrix",
-              "chol",
-              "coerce",
-              "crossprod",
-              "determinant",
-              "diag",
-              "dim",
-              "dimnames",
-              "dimnames<-",
-              "expand",
-              "expm",
-              "image",
-              "norm",
-              "rcond",
-              "show",
-              "solve",
-              "t",
-              "tcrossprod"
-              )
+	      "Schur",
+	      "as.matrix",
+	      "chol",
+	      "coerce",
+	      "crossprod",
+	      "determinant",
+	      "diag",
+	      "dim",
+	      "dimnames",
+	      "dimnames<-",
+	      "expand",
+	      "expm",
+	      "image",
+	      "norm",
+	      "rcond",
+	      "show",
+	      "solve",
+	      "t",
+	      "tcrossprod"
+	      )
